# wegonice-oxide-api

./: .env_missing_vars  .example.env  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build-binary.yml  ci.yml  static-code-check.yml  unit-tests.yml
database/: docker-compose.yml
src/: .env_missing_vars  config.rs  main.rs  test_utils.rs
src/api/: api_response.rs  auth_router.rs  heart_beat_router.rs  mod.rs  server.rs  users_router.rs
src/api/routers/: auth_router.rs  heart_beat_router.rs  mod.rs  recipes_router.rs  users_router.rs
src/api/services/: hash_service.rs  mod.rs  token_service.rs
src/db/: db_handler.rs  generic_handler.rs  mod.rs  mongo_db_handler.rs  user_handler.rs
src/model/: user.rs
src/server/: mod.rs  server.rs
