[package]
name = "wegonice-oxide-api"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "3.1"
bson = { version = "2.13", features = ["chrono-0_4"] }
tokio = "1.42.0"
chrono = "0.4"
serde = "1"
anyhow = "1"
dotenv = "0.15.0"
futures-util="0.3.31"
rand = "0.8.5"
axum = { version = "0.7", features = ["macros"] }
tower-cookies = "0.10.0"
tower-http = {version = "0.6.2", features = ["fs"] }