[package]
name = "wegonice-oxide-api"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "3.1.1"
bson = { version = "2.13", features = ["chrono-0_4"] }
tokio = "1.42.0"
chrono = "0.4.39"
serde = "1.0.217"
anyhow = "1.0.95"
dotenv = "0.15.0"
futures-util="0.3.31"
rand = "0.8.5"
axum = { version = "0.8.1", features = ["macros"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
pretty_assertions = "1.4.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
argon2 = "0.5.3"

[dev-dependencies]
axum-test = "16.4.1"
